change large screen

--- a/style.css
+++ b/style.css
@@ -1,3 +1,117 @@
+@media only screen and (min-width: 70rem) {
+  html {
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    font: 75% georgia, sans-serif;
+    line-height: 1.88889;
+    color: #050505;
+    background: #f5f0f0 url(/Zen_Gardens/css/img/zen_background_small.jpg) no-repeat;
+    background-size: 2500px 900px;
+    margin: 0;
+    text-align: center;
+    width: 70%;
+    padding: 15px;
+  }
+
+  h1 {
+    font-size: 55px;
+    margin-bottom: 0;
+  }
+
+  h2 {
+    margin-top: 0;
+  }
+
+  .page-wrapper {
+    position: absolute;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px 41px;
+    height: 300px;
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  .intro {
+    position: unset;
+    grid-column-end: 1/span 2;
+  }
+
+  header {
+    font-size: larger;
+    text-align: center;
+    background-color: #3e8052;
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .summary {
+    text-align: center;
+    grid-row: 2;
+    grid-column: 1/span 2;
+    border: 1px solid powderblue;
+  }
+
+  .preamble {
+    background-color: #bae7e7;
+    text-align: center;
+    grid-row: 2;
+  }
+
+  .main,
+zen-supporting {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px 41px;
+  }
+
+  .explanation {
+    background-color: #eca7a7;
+  }
+
+  .participation {
+    grid-column: 1;
+    grid-row: 2;
+    position: relative;
+    grid-template-rows: subgrid;
+    background-color: antiquewhite;
+  }
+
+  .benefits {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: #63f0f0;
+  }
+
+  .requirements {
+    grid-row: 2;
+    grid-column: 2;
+    background-color: #85cbeb;
+  }
+
+  footer {
+    grid-column: 1/span 2;
+    grid-row: 5;
+    background-color: #a1f3af;
+    text-align: center;
+    height: 40px;
+  }
+
+  /* I put this comment out - because it wraps to the side, and not bottom 
+  .wrapper {
+      text-align: center;
+      display: grid;
+      grid-area: auto;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr;
+      ul {
+          list-style-type: none;
+      }
+  }*/
+}
 @media only screen and (min-width: 35rem) {
   h1 {
     font-size: 2.5rem;
@@ -41,12 +155,15 @@ h2 {
     background-size: cover;
   }
 
-  div.mainsupporting {
+  div.main,
+zen-supporting {
     padding: 60px;
     background: #ffffff;
   }
-  div.mainsupporting footer,
-div.mainsupporting div.requirements p:last-child {
+  div.main footer,
+div.main div.requirements p:last-child,
+zen-supporting footer,
+zen-supporting div.requirements p:last-child {
     text-align: center;
   }
 
