--- a/partials/_Lg_screen.scss
+++ b/partials/_Lg_screen.scss
@@ -1,7 +1,4 @@
-@import 'partials/mixins';
-@import 'partials/variables';
-//Large
-@media only screen and(min-width:70rem) {
+@media only screen and(max-width: 800px) {
     $text-color: hsl(0, 0%, 2%);
     $h1-size: 55px;
     html {
@@ -12,7 +9,7 @@
         font: 75% georgia, sans-serif;
         line-height: 1.88889;
         color: $text-color;
-        background: #f5f0f0 url(/Zen_Gardens/css/img/zen_background_small.jpg) no-repeat;
+        background: #e7e1e1 url(/Zen_Gardens/css/img/zen_background_small.jpg) no-repeat;
         background-size: 2500px 900px;
         margin: 0;
         text-align: center;
@@ -71,26 +68,22 @@
         grid-row: 2;
         position: relative;
         grid-template-rows: subgrid;
-        background-color: antiquewhite;
     }
     .benefits {
         grid-column: 2;
         grid-row: 1;
-        background-color: rgb(99, 240, 240);
     }
     .requirements {
         grid-row: 2;
         grid-column: 2;
-        background-color: rgb(133, 203, 235);
     }
     footer {
         grid-column: 1/span 2;
         grid-row: 5;
-        background-color: rgb(161, 243, 175);
+        background-color: powderblue;
         text-align: center;
         height: 40px;
     }
-    /* I put this comment out - because it wraps to the side, and not bottom 
     .wrapper {
         text-align: center;
         display: grid;
@@ -100,67 +93,5 @@
         ul {
             list-style-type: none;
         }
-    }*/
-}
-
-// Medium
-@media only screen and (min-width: 35rem) {
-    h1 {
-        font-size: 2.5rem;
-    }
-    h1,
-    h2 {
-        text-transform: uppercase;
-    }
-    h1::before {
-        @include add-image(100px, 100px, "image/favicon_1.png");
-    }
-    h2::before {
-        content: " ";
-        padding: 50px;
-    }
-    div.page-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 5fr;
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0;
-    }
-    section.intro {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        padding: 40px;
-        text-align: center;
-        background: url(image/zen_background_small.jpg);
-        background-size: cover;
-    }
-    div.main,
-    zen-supporting {
-        padding: 60px;
-        background: $background-color;
-        footer,
-        div.requirements p:last-child {
-            text-align: center;
-        }
-    }
-    aside.sidebar {
-        padding: 40px;
-        grid-column: 1/2;
-        grid-row: 1/3;
-        background-color: $typo-color;
-    }
-    ul {
-        list-style-type: none;
-        display: inline;
-        margin: 0;
-        padding: 0;
-    }
-    .design-name {
-        margin: 0;
-        padding: 0;
-        display: block;
-    }
-    .designer-name {
-        margin-bottom: 200px;
     }
 }
