--- a/style.css
+++ b/style.css
@@ -1,8 +1,149 @@
-@media only screen and (min-width: 70rem) {
+
   html {
     margin: 0;
     padding: 0;
   }
+
+  @media only screen and (max-width: 35rem) {
+  
+    h1::before {
+      display: inline-block;
+      position: relative;
+      content: "";
+      width: 100px;
+      height: 100px;
+      background: url("image/favicon_1.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+  
+    h2::before {
+      content: " ";
+      padding: 50px;
+    }
+  body {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+      
+}
+
+header {
+    height: 150px;
+    padding: 1.8em;
+    margin: 10px 0;
+    border: 1px solid lightgrey;
+}
+section.intro {
+  background-image: url('../zengardens/image/zen_background_small.jpg');
+  background-size: cover;
+  line-height: 1.2em;
+}
+
+.intro h2 {
+    font-size: 1em;
+}
+
+
+.intro div , footer {
+  border: 1px solid lightgrey;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+.explanation , .participation , .benefits , .requirements {
+  border: 1px solid lightgrey;
+    margin: 10px 0;
+    padding: 10px;
+    
+}
+
+footer {
+    text-align: center;
+}
+}
+  @media only screen and (min-width: 35rem) {
+    h1 {
+      font-size: 2.5rem;
+    }
+  
+    h1,
+  h2 {
+      text-transform: uppercase;
+    }
+  
+    h1::before {
+      display: inline-block;
+      position: relative;
+      content: "";
+      width: 100px;
+      height: 100px;
+      background: url("image/favicon_1.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+  
+    h2::before {
+      content: " ";
+      padding: 50px;
+    }
+  
+    div.page-wrapper {
+      display: grid;
+      grid-template-columns: 1fr 5fr;
+      max-width: 100%;
+      margin: 0 auto;
+      padding: 0;
+    }
+  
+    section.intro {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      padding: 40px;
+      text-align: center;
+      background: url(image/zen_background_small.jpg);
+      background-size: cover;
+    }
+  
+    div.main,
+  zen-supporting {
+      padding: 60px;
+      background: #ffffff;
+    }
+    div.main footer,
+  div.main div.requirements p:last-child,
+  zen-supporting footer,
+  zen-supporting div.requirements p:last-child {
+      text-align: center;
+    }
+  
+    aside.sidebar {
+      padding: 40px;
+      grid-column: 1/2;
+      grid-row: 1/3;
+      background-color: #e6e6e6;
+    }
+  
+    ul {
+      list-style-type: none;
+      display: inline;
+      margin: 0;
+      padding: 0;
+    }
+  
+    .design-name {
+      margin: 0;
+      padding: 0;
+      display: block;
+    }
+  
+    .designer-name {
+      margin-bottom: 200px;
+    }
+  }
+  
+
+  @media only screen and (min-width: 70rem) {
 
   body {
     font: 75% georgia, sans-serif;
@@ -111,85 +252,6 @@ zen-supporting {
           list-style-type: none;
       }
   }*/
-}
-@media only screen and (min-width: 35rem) {
-  h1 {
-    font-size: 2.5rem;
-  }
-
-  h1,
-h2 {
-    text-transform: uppercase;
-  }
-
-  h1::before {
-    display: inline-block;
-    position: relative;
-    content: "";
-    width: 100px;
-    height: 100px;
-    background: url("image/favicon_1.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-  }
-
-  h2::before {
-    content: " ";
-    padding: 50px;
-  }
-
-  div.page-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0;
-  }
-
-  section.intro {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    padding: 40px;
-    text-align: center;
-    background: url(image/zen_background_small.jpg);
-    background-size: cover;
-  }
-
-  div.main,
-zen-supporting {
-    padding: 60px;
-    background: #ffffff;
-  }
-  div.main footer,
-div.main div.requirements p:last-child,
-zen-supporting footer,
-zen-supporting div.requirements p:last-child {
-    text-align: center;
-  }
-
-  aside.sidebar {
-    padding: 40px;
-    grid-column: 1/2;
-    grid-row: 1/3;
-    background-color: #e6e6e6;
-  }
-
-  ul {
-    list-style-type: none;
-    display: inline;
-    margin: 0;
-    padding: 0;
-  }
-
-  .design-name {
-    margin: 0;
-    padding: 0;
-    display: block;
-  }
-
-  .designer-name {
-    margin-bottom: 200px;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
