--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,133 @@
 @import 'partials/mixins';
 @import 'partials/variables';
+
+//small
+@media only screen and (max-width: 35rem) {
+  
+    h1::before {
+      display: inline-block;
+      position: relative;
+      content: "";
+      width: 100px;
+      height: 100px;
+      background: url("image/favicon_1.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+  
+    h2::before {
+      content: " ";
+      padding: 50px;
+    }
+  body {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+      
+}
+
+header {
+    background-image: url('../zengardens/image/zen_background_small.jpg');
+    background-size: cover;
+    padding: 1.8em;
+    margin: 10px 0;
+    border: 1px solid lightgrey;
+}
+section.intro {
+  line-height: 1.2em;
+}
+
+.intro h2 {
+    font-size: 1em;
+}
+
+
+.intro div , footer {
+    border: 1px solid lightgrey;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+.explanation , .participation , .benefits , .requirements {
+    border: 1px solid lightgrey;
+    margin: 10px 0;
+    padding: 10px;
+    
+}
+aside.sidebar {
+  padding: 40px;
+  background-color: $typo-color;
+}
+
+footer {
+    text-align: center;
+    background-color: #a1f3af;
+    height: 20px;
+}
+}
+
+// Medium
+@media only screen and (min-width: 35rem) {
+    h1 {
+        font-size: 2.5rem;
+    }
+    h1,
+    h2 {
+        text-transform: uppercase;
+    }
+    h1::before {
+        @include add-image(100px, 100px, "image/favicon_1.png");
+    }
+    h2::before {
+        content: " ";
+        padding: 50px;
+    }
+    div.page-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 0;
+    }
+    section.intro {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        padding: 40px;
+        text-align: center;
+        background: url(image/zen_background_small.jpg);
+        background-size: cover;
+    }
+    div.main,
+    zen-supporting {
+        padding: 60px;
+        background: $background-color;
+        footer,
+        div.requirements p:last-child {
+            text-align: center;
+        }
+    }
+    aside.sidebar {
+        padding: 40px;
+        grid-column: 1/2;
+        grid-row: 1/3;
+        background-color: $typo-color;
+    }
+    ul {
+        list-style-type: none;
+        display: inline;
+        margin: 0;
+        padding: 0;
+    }
+    .design-name {
+        margin: 0;
+        padding: 0;
+        display: block;
+    }
+    .designer-name {
+        margin-bottom: 200px;
+    }
+}
+
 //Large
 @media only screen and(min-width:70rem) {
     $text-color: hsl(0, 0%, 2%);
@@ -103,64 +231,3 @@
     }*/
 }
 
-// Medium
-@media only screen and (min-width: 35rem) {
-    h1 {
-        font-size: 2.5rem;
-    }
-    h1,
-    h2 {
-        text-transform: uppercase;
-    }
-    h1::before {
-        @include add-image(100px, 100px, "image/favicon_1.png");
-    }
-    h2::before {
-        content: " ";
-        padding: 50px;
-    }
-    div.page-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 5fr;
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0;
-    }
-    section.intro {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        padding: 40px;
-        text-align: center;
-        background: url(image/zen_background_small.jpg);
-        background-size: cover;
-    }
-    div.main,
-    zen-supporting {
-        padding: 60px;
-        background: $background-color;
-        footer,
-        div.requirements p:last-child {
-            text-align: center;
-        }
-    }
-    aside.sidebar {
-        padding: 40px;
-        grid-column: 1/2;
-        grid-row: 1/3;
-        background-color: $typo-color;
-    }
-    ul {
-        list-style-type: none;
-        display: inline;
-        margin: 0;
-        padding: 0;
-    }
-    .design-name {
-        margin: 0;
-        padding: 0;
-        display: block;
-    }
-    .designer-name {
-        margin-bottom: 200px;
-    }
-}
