--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,6 +1,6 @@
 // Variables
-$logo-color: #5f8ee4;
-$nav-color: #19191a;
-$back-color: #e4655f;
+$header-color:  #3e8052;;
 $typo-color: #e6e6e6;
 $background-color: #ffffff;
+$text-color: hsl(0, 0%, 2%);
+$h1-size: 55px;
