--- a/style.css
+++ b/style.css
@@ -1,160 +1,166 @@
+@font-face {
+  font-family: "Fondamento";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/fondamento/v11/4UaHrEJGsxNmFTPDnkaJ96Tp56N1.woff2) format("woff2");
+}
+@media only screen and (max-width: 35rem) {
+  h1::before {
+    display: inline-block;
+    position: relative;
+    content: "";
+    width: 100px;
+    height: 100px;
+    background: url("image/favicon_1.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
 
+  h2::before {
+    content: " ";
+    padding: 50px;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+  }
+
+  header {
+    background-image: url("../zengardens/image/zen_background_small.jpg");
+    background-size: cover;
+    padding: 1.8em;
+    margin: 10px 0;
+    border: 1px solid lightgrey;
+  }
+
+  section.intro {
+    line-height: 1.2em;
+  }
+
+  .intro h2 {
+    font-size: 1em;
+  }
+
+  .intro div,
+footer {
+    border: 1px solid lightgrey;
+    margin: 10px 0;
+    padding: 10px;
+  }
+
+  .explanation,
+.participation,
+.benefits,
+.requirements {
+    border: 1px solid lightgrey;
+    margin: 10px 0;
+    padding: 10px;
+  }
+
+  aside.sidebar {
+    padding: 40px;
+    background-color: #e6e6e6;
+  }
+
+  footer {
+    text-align: center;
+    background-color: #a1f3af;
+    height: 20px;
+  }
+}
+@media only screen and (min-width: 35rem) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h1,
+h2 {
+    text-transform: uppercase;
+  }
+
+  h1::before {
+    display: inline-block;
+    position: relative;
+    content: "";
+    width: 100px;
+    height: 100px;
+    background: url("image/favicon_1.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+
+  h2::before {
+    content: " ";
+    padding: 50px;
+  }
+
+  div.page-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  section.intro {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding: 40px;
+    text-align: center;
+    background: url(image/zen_background_small.jpg);
+    background-size: cover;
+  }
+
+  div.main,
+zen-supporting {
+    padding: 60px;
+    background: #ffffff;
+  }
+  div.main footer,
+div.main div.requirements p:last-child,
+zen-supporting footer,
+zen-supporting div.requirements p:last-child {
+    text-align: center;
+  }
+
+  aside.sidebar {
+    padding: 40px;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    background-color: #e6e6e6;
+  }
+
+  ul {
+    list-style-type: none;
+    display: inline;
+    margin: 0;
+    padding: 0;
+  }
+
+  .design-name {
+    margin: 0;
+    padding: 0;
+    display: block;
+  }
+
+  .designer-name {
+    margin-bottom: 200px;
+  }
+}
+@media only screen and (min-width: 70rem) {
   html {
     margin: 0;
     padding: 0;
   }
 
-  @media only screen and (max-width: 35rem) {
-  
-    h1::before {
-      display: inline-block;
-      position: relative;
-      content: "";
-      width: 100px;
-      height: 100px;
-      background: url("image/favicon_1.png");
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-  
-    h2::before {
-      content: " ";
-      padding: 50px;
-    }
-  body {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-      
-}
-
-header {
-    background-image: url('../zengardens/image/zen_background_small.jpg');
-    background-size: cover;
-    padding: 1.8em;
-    margin: 10px 0;
-    border: 1px solid lightgrey;
-}
-section.intro {
-  line-height: 1.2em;
-}
-
-.intro h2 {
-    font-size: 1em;
-}
-
-
-.intro div , footer {
-  border: 1px solid lightgrey;
-    margin: 10px 0;
-    padding: 10px;
-}
-
-.explanation , .participation , .benefits , .requirements {
-  border: 1px solid lightgrey;
-    margin: 10px 0;
-    padding: 10px;
-    
-}
-aside.sidebar {
-  padding: 40px;
-  background-color: ;
-}
-
-footer {
-    text-align: center;
-    background-color: #a1f3af;
-    height: 20px;
-}
-}
-  @media only screen and (min-width: 35rem) {
-    h1 {
-      font-size: 2.5rem;
-    }
-  
-    h1,
-  h2 {
-      text-transform: uppercase;
-    }
-  
-    h1::before {
-      display: inline-block;
-      position: relative;
-      content: "";
-      width: 100px;
-      height: 100px;
-      background: url("image/favicon_1.png");
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-  
-    h2::before {
-      content: " ";
-      padding: 50px;
-    }
-  
-    div.page-wrapper {
-      display: grid;
-      grid-template-columns: 1fr 5fr;
-      max-width: 100%;
-      margin: 0 auto;
-      padding: 0;
-    }
-  
-    section.intro {
-      grid-column: 2/3;
-      grid-row: 1/2;
-      padding: 40px;
-      text-align: center;
-      background: url(image/zen_background_small.jpg);
-      background-size: cover;
-    }
-  
-    div.main,
-  zen-supporting {
-      padding: 60px;
-      background: #ffffff;
-    }
-    div.main footer,
-  div.main div.requirements p:last-child,
-  zen-supporting footer,
-  zen-supporting div.requirements p:last-child {
-      text-align: center;
-    }
-  
-    aside.sidebar {
-      padding: 40px;
-      grid-column: 1/2;
-      grid-row: 1/3;
-      background-color: #e6e6e6;
-    }
-  
-    ul {
-      list-style-type: none;
-      display: inline;
-      margin: 0;
-      padding: 0;
-    }
-  
-    .design-name {
-      margin: 0;
-      padding: 0;
-      display: block;
-    }
-  
-    .designer-name {
-      margin-bottom: 200px;
-    }
-  }
-  
-
-  @media only screen and (min-width: 70rem) {
-
   body {
     font: 75% georgia, sans-serif;
     line-height: 1.88889;
     color: #050505;
-    background: #f5f0f0 url(/Zen_Gardens/css/img/zen_background_small.jpg) no-repeat;
+    background: #aaebd2 url(/Zen_Gardens/css/img/zen_background_small.jpg) no-repeat;
     background-size: 2500px 900px;
     margin: 0;
     text-align: center;
@@ -164,11 +170,25 @@ footer {
 
   h1 {
     font-size: 55px;
+    font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 0;
+    font-weight: 700;
   }
 
   h2 {
     margin-top: 0;
+    font-size: 35px;
+    font-family: cursive;
+  }
+
+  h3 {
+    font-size: 25px;
+    color: #06310a;
+  }
+
+  p {
+    font-size: 13px;
+    text-align: center;
   }
 
   .page-wrapper {
@@ -191,6 +211,7 @@ footer {
     background-color: #3e8052;
     grid-column: 2;
     grid-row: 1;
+    border-radius: 10px;
   }
 
   .summary {
@@ -198,12 +219,17 @@ footer {
     grid-row: 2;
     grid-column: 1/span 2;
     border: 1px solid powderblue;
+    margin-bottom: 20px;
+    background-color: #c3fac8;
+    border-radius: 10px;
   }
 
   .preamble {
     background-color: #bae7e7;
     text-align: center;
     grid-row: 2;
+    padding: 10px;
+    border-radius: 10px;
   }
 
   .main,
@@ -212,10 +238,13 @@ zen-supporting {
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
     gap: 20px 41px;
+    border-radius: 10px;
   }
 
   .explanation {
     background-color: #eca7a7;
+    padding: 10px;
+    border-radius: 10px;
   }
 
   .participation {
@@ -223,19 +252,25 @@ zen-supporting {
     grid-row: 2;
     position: relative;
     grid-template-rows: subgrid;
-    background-color: antiquewhite;
+    background-color: #f0dbc0;
+    padding: 10px;
+    border-radius: 10px;
   }
 
   .benefits {
     grid-column: 2;
     grid-row: 1;
     background-color: #63f0f0;
+    padding: 10px;
+    border-radius: 10px;
   }
 
   .requirements {
     grid-row: 2;
     grid-column: 2;
     background-color: #85cbeb;
+    padding: 10px;
+    border-radius: 10px;
   }
 
   footer {
@@ -243,20 +278,27 @@ zen-supporting {
     grid-row: 5;
     background-color: #a1f3af;
     text-align: center;
+    font-size: 30px;
     height: 40px;
+    padding: 10px;
+    border-radius: 10px;
   }
 
-  /* I put this comment out - because it wraps to the side, and not bottom 
+  /* I put this comment out - because it wraps to the side, and not bottom */
   .wrapper {
-      text-align: center;
-      display: grid;
-      grid-area: auto;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr;
-      ul {
-          list-style-type: none;
-      }
-  }*/
+    text-align: center;
+    display: grid;
+    grid-area: auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    border-radius: 10px;
+    text-align: left;
+    padding: 15px;
+    background-color: #c1ddbc;
+  }
+  .wrapper ul {
+    list-style-type: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
