updates on font colors

--- a/partials/_typography.scss
+++ b/partials/_typography.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Fondamento';
-    font-style: normal;
+    font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/fondamento/v11/4UaHrEJGsxNmFTPDnkaJ96Tp56N1.woff2) format('woff2');
+    src: url('https://fonts.googleapis.com/css2?family=Fondamento:ital@0;1&display=swap');
 }
