--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,6 +1,17 @@
 // Variables
-$header-color:  #3e8052;;
+$header-color: #3e8052;
 $typo-color: #e6e6e6;
 $background-color: #ffffff;
 $text-color: hsl(0, 0%, 2%);
 $h1-size: 55px;
+$font-family-h1: 'Fondamento',
+cursive;
+//section colors
+$side-color:#66ad72;
+$summary-color:#c3fac8;
+$preamble-color:rgb(186, 231, 231);
+$explanation-color:#eca7a7;
+$participation-color:rgb(240, 219, 192);
+$benefits-color:rgb(99, 240, 240);
+$require-color:rgb(133, 203, 235);
+$footer-color:rgb(161, 243, 175);
