--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "Fondamento";
-  font-style: normal;
+  font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/fondamento/v11/4UaHrEJGsxNmFTPDnkaJ96Tp56N1.woff2) format("woff2");
+  src: url("https://fonts.googleapis.com/css2?family=Fondamento:ital@0;1&display=swap");
 }
 @media only screen and (max-width: 35rem) {
   h1::before {
@@ -130,7 +130,6 @@ zen-supporting div.requirements p:last-child {
     padding: 40px;
     grid-column: 1/2;
     grid-row: 1/3;
-    background-color: #e6e6e6;
   }
 
   ul {
@@ -166,11 +165,12 @@ zen-supporting div.requirements p:last-child {
     text-align: center;
     width: 70%;
     padding: 15px;
+    border-radius: 15px;
   }
 
   h1 {
     font-size: 55px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Fondamento", cursive;
     margin-bottom: 0;
     font-weight: 700;
   }
@@ -292,12 +292,23 @@ zen-supporting {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     border-radius: 10px;
+    font-size: 16px;
     text-align: left;
     padding: 15px;
-    background-color: #c1ddbc;
+    background-color: #66ad72;
   }
   .wrapper ul {
     list-style-type: none;
+  }
+  .wrapper a {
+    color: #000;
+  }
+  .wrapper a:hover {
+    color: #85cbeb;
+  }
+
+  .aside.sidebar {
+    background-color: #c3fac8;
   }
 }
 
