--- a/style.scss
+++ b/style.scss
@@ -106,7 +106,6 @@
             padding: 40px;
             grid-column: 1/2;
             grid-row: 1/3;
-            background-color: $typo-color;
         }
         ul {
             list-style-type: none;
@@ -140,10 +139,11 @@
             text-align: center;
             width: 70%;
             padding: 15px;
+            border-radius: 15px;
         }
         h1 {
             font-size: $h1-size;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: $font-family-h1;
             margin-bottom: 0;
             font-weight: 700;
         }
@@ -186,11 +186,11 @@
             grid-column: 1/ span 2;
             border: 1px solid powderblue;
             margin-bottom: 20px;
-            background-color: #c3fac8;
+            background-color: $summary-color;
             border-radius: 10px;
         }
         .preamble {
-            background-color: rgb(186, 231, 231);
+            background-color: $preamble-color;
             text-align: center;
             grid-row: 2;
             padding: 10px;
@@ -205,7 +205,7 @@
             border-radius: 10px;
         }
         .explanation {
-            background-color: #eca7a7;
+            background-color: $explanation-color;
             padding: 10px;
             border-radius: 10px;
         }
@@ -214,28 +214,28 @@
             grid-row: 2;
             position: relative;
             grid-template-rows: subgrid;
-            background-color: rgb(240, 219, 192);
+            background-color: $participation-color;
             padding: 10px;
             border-radius: 10px;
         }
         .benefits {
             grid-column: 2;
             grid-row: 1;
-            background-color: rgb(99, 240, 240);
+            background-color: $benefits-color;
             padding: 10px;
             border-radius: 10px;
         }
         .requirements {
             grid-row: 2;
             grid-column: 2;
-            background-color: rgb(133, 203, 235);
+            background-color: $require-color;
             padding: 10px;
             border-radius: 10px;
         }
         footer {
             grid-column: 1/span 2;
             grid-row: 5;
-            background-color: rgb(161, 243, 175);
+            background-color: $footer-color;
             text-align: center;
             font-size: 30px;
             height: 40px;
@@ -250,11 +250,21 @@
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
             border-radius: 10px;
+            font-size: 16px;
             text-align: left;
             padding: 15px;
-            background-color: #c1ddbc;
+            background-color: $side-color;
             ul {
                 list-style-type: none;
             }
+            a {
+                color: #000;
+            }
+            a:hover {
+                color: $require-color;
+            }
+        }
+        .aside.sidebar {
+            background-color: #c3fac8;
         }
     }
