--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-@font-face {
-  font-family: "Fondamento";
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: url("https://fonts.googleapis.com/css2?family=Fondamento:ital@0;1&display=swap");
-}
+@import url("https://fonts.googleapis.com/css2?family=Fondamento:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=El+Messiri&family=Sawarabi+Mincho&display=swap");
 @media only screen and (max-width: 35rem) {
   h1::before {
     display: inline-block;
@@ -26,10 +22,10 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    background-image: url("../zengardens/image/zen_background_small.jpg");
   }
 
   header {
-    background-image: url("../zengardens/image/zen_background_small.jpg");
     background-size: cover;
     padding: 1.8em;
     margin: 10px 0;
@@ -159,8 +155,8 @@ zen-supporting div.requirements p:last-child {
     font: 75% georgia, sans-serif;
     line-height: 1.88889;
     color: #050505;
-    background: #aaebd2 url(/Zen_Gardens/css/img/zen_background_small.jpg) no-repeat;
     background-size: 2500px 900px;
+    background-color: #9bcfa0;
     margin: 0;
     text-align: center;
     width: 70%;
@@ -170,24 +166,26 @@ zen-supporting div.requirements p:last-child {
 
   h1 {
     font-size: 55px;
-    font-family: "Fondamento", cursive;
+    font-family: "El Messiri", sans-serif;
     margin-bottom: 0;
     font-weight: 700;
+    text-transform: "";
   }
 
   h2 {
     margin-top: 0;
     font-size: 35px;
-    font-family: cursive;
+    font-family: "El Messiri", sans-serif;
   }
 
   h3 {
     font-size: 25px;
+    font-family: "Sawarabi Mincho", sans-serif;
     color: #06310a;
   }
 
   p {
-    font-size: 13px;
+    font-size: 16px;
     text-align: center;
   }
 
@@ -203,6 +201,7 @@ zen-supporting div.requirements p:last-child {
   .intro {
     position: unset;
     grid-column-end: 1/span 2;
+    border-radius: 15px;
   }
 
   header {
@@ -276,12 +275,19 @@ zen-supporting {
   footer {
     grid-column: 1/span 2;
     grid-row: 5;
-    background-color: #a1f3af;
+    background-color: #93ce9d;
     text-align: center;
     font-size: 30px;
     height: 40px;
     padding: 10px;
     border-radius: 10px;
+    margin-bottom: 15px;
+  }
+  footer a {
+    color: #000;
+  }
+  footer a:hover {
+    color: red;
   }
 
   /* I put this comment out - because it wraps to the side, and not bottom */
