--- a/style.scss
+++ b/style.scss
@@ -77,6 +77,10 @@
             content: " ";
             padding: 50px;
         }
+
+        header {
+            background-color: rgb(62, 128, 82);
+        }
         div.page-wrapper {
             display: grid;
             grid-template-columns: 1fr 5fr;
