--- a/partials/_med_screen.scss
+++ b/partials/_med_screen.scss
@@ -29,6 +29,10 @@
         background: url(image/zen_background_small.jpg);
         background-size: cover;
     }
+
+    header {
+        background-color: rgb(62, 128, 82);
+    }
     div.main,
     zen-supporting {
         padding: 60px;
